Fix some layout issues

--- a/20190114/app/ej-styles.css
+++ b/20190114/app/ej-styles.css
@@ -10,9 +10,6 @@ a.btn {padding: 5px 20px; vertical-align: top; height: 35px;}
 a.btn-success {color: #fff !important;}
 #content {font-family:-apple-system,BlinkMacSystemFont,Open Sans,Segoe UI,Roboto,Helvetica Neue,Verdana,sans-serif;}
 #content h1, #content h2, #content h3, #content h4, #content h5, #content h6, .SS_ToolLabels, .SS_ToolLabels * {font-family:Oswald,Helvetica Neue,Helvetica,Arial,sans-serif !important;}
-
-
-/* Specific fixes for SS styles */
 .SS_PageBody br, .SS_CopyRightStatement, .SS_SkipNavigationLinks, .SS_EJPPreContentHorizontalRules , .SS_HorizontalRules, .SS_EJPPreCopyrightHorizontalRules , .SS_searchTitle , #JournalLinkTable caption {display: none !important;}
 
 /* Other Styling */
@@ -23,7 +20,7 @@ a img {border:0;}
 #content-container {width:100% !important; background-color:#fff;}
 #content * {line-height: inherit;}
 #content, div.topNavigation {max-width:1100px; margin-left:auto; margin-right:auto;}
-#content {border-left:1px solid #ccc; border-right:1px solid #ccc; padding: 10px 30px;}
+#content {border-left:1px solid #ccc; border-right:1px solid #ccc; padding: 10px 0;}
 #content p {line-height:1.5em;}
 div.topNavContainer {width:100%;}
 .topNavigation {width:100%; margin: 30px 0 15px 0; padding: 0 60px; max-width: 1190px !important;}
@@ -35,14 +32,14 @@ div.topNavContainer {width:100%;}
 .topNavigation select[name='HISTORY'] {float: right; font-size: .9em; width:200px;}
 
 .SS_ToolLabels {font-size: 1.1em; text-transform: uppercase; font-weight: bold;}
+.SS_EJPTable {margin: 0 30px;}
 .SS_EJPMainCell > div {margin: 0 10px 40px 10px;}
 .SS_ResultsAtoZLinks a {font-size: .9em; border-left: 1px solid #666; padding-left: 8px;}
-.SS_ResultsAtoZLinks a:first-child {border: 0;}
+.SS_ResultsAtoZLinks a:first-child {border: 0; padding-left:0;}
 
 .SS_SearchToolsGroup {padding: 10px 10px 15px 10px !important; border-bottom: 1px solid #CCC; margin-bottom: 15px; background: url('//iii.library.unt.edu/screens/tile_search.jpg') repeat-x bottom left;}
 .SS_ResultsNoteGroup {background-color: #E7FEEA; display: block; height: 1.5em; margin-bottom: 10px;}
 .SS_LetterLinks {clear: both;}
-#content input[type="submit"] {background-color: #F2F2F2; border: 1px solid #059033; padding: 3px 7px;}
 #content a:link {color: #014184;}
 #nonav {border-top: 1px solid #CCC;}
 .SS_HoldingsList {margin-bottom: 10px; border-bottom: 1px solid #CCC; padding-bottom: 20px !important;}
